fix(toolbar): add a min-width to the toolbar content so that it won't overlap buttons
fixes #5657

--- a/ionic/components/toolbar/toolbar.ios.scss
+++ b/ionic/components/toolbar/toolbar.ios.scss
@@ -57,6 +57,7 @@ ion-navbar-section {
 .toolbar-content {
   flex: 1;
   order: map-get($toolbar-order-ios, content);
+  min-width: 0;
 }
 
 .toolbar-title {
